--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1"/>
-<title>Epiciclos – Corazón</title>
+<title>Epiciclos – Corazón (lento + trayectoria)</title>
 <style>
   :root{
     --bg:#0f141b; --panel:#121a23; --ink:#e6eef7; --muted:#9fb3c9; --accent:#6ab0ff;
@@ -12,11 +12,11 @@
   html,body{height:100%;margin:0;background:var(--bg);color:var(--ink);font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Arial}
   canvas{position:fixed;inset:0;width:100vw;height:100vh;display:block;background:#000}
   .ui{position:fixed;left:12px;top:12px;display:grid;gap:10px;background:var(--panel);
-      border:1px solid rgba(230,238,247,.1);padding:12px;border-radius:12px;max-width:310px}
-  .row{display:flex;align-items:center;gap:8px}
+      border:1px solid rgba(230,238,247,.1);padding:12px;border-radius:12px;max-width:320px}
+  .row{display:flex;align-items:center;gap:8px;flex-wrap:wrap}
   .lab{color:var(--muted);font-size:12px}
   .title{font-weight:700}
-  input[type="range"]{width:160px}
+  input[type="range"]{width:170px}
   select,button{background:#101722;border:1px solid rgba(230,238,247,.12);color:var(--ink);padding:8px 10px;border-radius:10px}
   button.primary{background:var(--accent);color:#06121e;border:0}
   a.small{color:var(--muted);font-size:12px;text-decoration:none}
@@ -32,7 +32,7 @@
     <select id="shape">
       <option value="heart" selected>Corazón</option>
       <option value="star">Estrella (5 puntas)</option>
-      <option value="infinity">Infinito (lemniscata)</option>
+      <option value="infinity">Infinito</option>
       <option value="circle">Círculo</option>
     </select>
     <button id="reset">Reset</button>
@@ -43,13 +43,23 @@
     <input id="harm" type="range" min="8" max="256" step="8" value="96">
     <span id="harmVal" class="lab">96</span>
   </div>
+
+  <!-- MUCHO MÁS DESPACIO -->
   <div class="row">
     <span class="lab">Velocidad</span>
-    <input id="speed" type="range" min="0.25" max="4" step="0.25" value="1">
-    <span id="spdVal" class="lab">1×</span>
+    <input id="speed" type="range" min="0.02" max="1" step="0.02" value="0.10">
+    <span id="spdVal" class="lab">0.10×</span>
+  </div>
+
+  <!-- TRAYECTORIA -->
+  <div class="row">
+    <span class="lab">Trayectoria</span>
+    <input id="trail" type="range" min="50" max="4000" step="50" value="1500">
+    <span id="trailVal" class="lab">1500</span>
   </div>
   <div class="row">
     <label class="lab"><input id="showCircles" type="checkbox" checked> Mostrar círculos</label>
+    <label class="lab"><input id="showTrace" type="checkbox" checked> Dibujar trayectoria</label>
   </div>
   <div class="row" style="gap:10px">
     <button id="pause">Pausa</button>
@@ -68,6 +78,8 @@ const shapeSel = document.getElementById('shape');
 const harm = document.getElementById('harm'); const harmVal = document.getElementById('harmVal');
 const speed = document.getElementById('speed'); const spdVal = document.getElementById('spdVal');
 const showCircles = document.getElementById('showCircles');
+const showTrace = document.getElementById('showTrace');
+const trail = document.getElementById('trail'); const trailVal = document.getElementById('trailVal');
 const pauseBtn = document.getElementById('pause');
 const drawOnlyBtn = document.getElementById('drawOnly');
 const resetBtn = document.getElementById('reset');
@@ -75,84 +87,69 @@ const savePNGBtn = document.getElementById('savePNG');
 
 let points=[], coeffs=[], order=[];
 let t=0, running=true, onlyLine=false;
+let trace=[], traceMax=parseInt(trail.value,10);
 
-function resize(){
-  W = Math.floor(innerWidth*dpi); H = Math.floor(innerHeight*dpi);
-  cvs.width=W; cvs.height=H;
-}
-resize(); addEventListener('resize', resize);
+function resize(){ W=Math.floor(innerWidth*dpi); H=Math.floor(innerHeight*dpi); cvs.width=W; cvs.height=H; }
+resize(); addEventListener('resize', ()=>{ resize(); buildShape(); });
 
-/* ---------- Figuras paramétricas ---------- */
+/* ---------- Figuras ---------- */
 function sampleHeart(N){
-  // Corazón clásico: escalado y centrado
-  // x = 16 sin^3 t
-  // y = 13 cos t − 5 cos 2t − 2 cos 3t − cos 4t
-  const pts=[];
-  const s = Math.min(W,H)*0.03; // escala
+  const pts=[]; const s=Math.min(W,H)*0.03;
   for(let i=0;i<N;i++){
-    const t = i/N * 2*Math.PI;
-    const x = 16*Math.pow(Math.sin(t),3);
-    const y = 13*Math.cos(t)-5*Math.cos(2*t)-2*Math.cos(3*t)-Math.cos(4*t);
+    const tt = i/N*2*Math.PI;
+    const x = 16*Math.pow(Math.sin(tt),3);
+    const y = 13*Math.cos(tt)-5*Math.cos(2*tt)-2*Math.cos(3*tt)-Math.cos(4*tt);
     pts.push({x: W/2 + x*s, y: H/2 - y*s});
   }
   return pts;
 }
 function sampleStar(N){
-  const pts=[];
-  const R = Math.min(W,H)*0.33, r = R*0.4, cx=W/2, cy=H/2;
+  const pts=[], R=Math.min(W,H)*0.33, r=R*0.4, cx=W/2, cy=H/2;
   for(let i=0;i<N;i++){
     const a = i/N*2*Math.PI;
-    const k = (i% (N/5) < (N/10)) ? R : r;
+    const k = (i%(N/5) < (N/10)) ? R : r;
     pts.push({x:cx + k*Math.cos(a*2.5), y:cy + k*Math.sin(a*2.5)});
   }
   return pts;
 }
 function sampleInfinity(N){
-  const a = Math.min(W,H)*0.22, cx=W/2, cy=H/2;
-  const pts=[];
+  const a=Math.min(W,H)*0.22, cx=W/2, cy=H/2; const pts=[];
   for(let i=0;i<N;i++){
-    const t = i/N*2*Math.PI;
-    const denom = 1+Math.sin(t)*Math.sin(t);
-    const x = a*Math.cos(t)/denom;
-    const y = a*Math.sin(t)*Math.cos(t)/denom;
-    pts.push({x:cx+x, y:cy+y});
+    const tt = i/N*2*Math.PI, d=1+Math.sin(tt)*Math.sin(tt);
+    pts.push({x:cx + a*Math.cos(tt)/d, y:cy + a*Math.sin(tt)*Math.cos(tt)/d});
   }
   return pts;
 }
 function sampleCircle(N){
   const pts=[], R=Math.min(W,H)*0.33, cx=W/2, cy=H/2;
-  for(let i=0;i<N;i++){
-    const a = i/N*2*Math.PI;
-    pts.push({x:cx+R*Math.cos(a), y:cy+R*Math.sin(a)});
-  }
+  for(let i=0;i<N;i++){ const a=i/N*2*Math.PI; pts.push({x:cx+R*Math.cos(a), y:cy+R*Math.sin(a)}); }
   return pts;
 }
 
-/* ---------- Utilidades ---------- */
+/* ---------- DFT ---------- */
 function dft(points){
   const N=points.length;
   let cx=0,cy=0; for(const p of points){cx+=p.x; cy+=p.y} cx/=N; cy/=N;
   const z=points.map(p=>({re:p.x-cx, im:p.y-cy}));
   const C=[];
   for(let k=-Math.floor(N/2); k<=Math.floor(N/2); k++){
-    let re=0,im=0;
+    let re=0, im=0;
     for(let n=0;n<N;n++){
       const ang=-2*Math.PI*k*n/N;
       re += z[n].re*Math.cos(ang) - z[n].im*Math.sin(ang);
       im += z[n].re*Math.sin(ang) + z[n].im*Math.cos(ang);
     }
     re/=N; im/=N;
-    C.push({k, amp: Math.hypot(re,im), phase: Math.atan2(im,re), cx, cy});
+    C.push({k, amp:Math.hypot(re,im), phase:Math.atan2(im,re), cx, cy});
   }
   return C;
 }
-function rebuildOrder(){
-  order = [...coeffs].sort((a,b)=> b.amp - a.amp);
-}
+function rebuildOrder(){ order=[...coeffs].sort((a,b)=>b.amp-a.amp); }
 
 /* ---------- Animación ---------- */
 function drawFrame(dt){
-  if(running){ t += dt * parseFloat(speed.value); }
+  if(running){ t += dt * parseFloat(speed.value); } // MUCHO MÁS LENTO por defecto
+
   ctx.setTransform(1,0,0,1,0,0);
   ctx.clearRect(0,0,W,H);
 
@@ -172,13 +169,26 @@ function drawFrame(dt){
     x += vx; y += vy;
   }
 
-  // punto final y trazo
+  // Trazo acumulado (trayectoria)
+  if(showTrace.checked){
+    trace.push([x,y]);
+    if(trace.length>traceMax) trace.splice(0, trace.length-traceMax);
+
+    // dibujar con desvanecimiento
+    ctx.lineWidth=2*dpi;
+    for(let i=1;i<trace.length;i++){
+      const a = i/trace.length; // 0..1
+      ctx.strokeStyle = `rgba(230,238,247,${a})`;
+      ctx.beginPath();
+      ctx.moveTo(trace[i-1][0], trace[i-1][1]);
+      ctx.lineTo(trace[i][0], trace[i][1]);
+      ctx.stroke();
+    }
+  }
+
+  // punto actual
   ctx.fillStyle='#e6eef7';
   ctx.beginPath(); ctx.arc(x,y,2.5*dpi,0,Math.PI*2); ctx.fill();
-
-  ctx.lineWidth=2*dpi; ctx.strokeStyle='#e6eef7';
-  // Dibujar la curva "verdadera" una vez (opcionalmente para comparar).
-  // Aquí omitimos para dejar solo lo reconstruido por epiciclos.
 }
 
 let last=performance.now();
@@ -188,32 +198,30 @@ function loop(now){
   requestAnimationFrame(loop);
 }
 
-/* ---------- Eventos UI ---------- */
+/* ---------- UI ---------- */
 function buildShape(){
-  const N = 1024; // puntos de muestreo para calidad de DFT
-  const mode = shapeSel.value;
-  if(mode==='heart') points = sampleHeart(N);
-  else if(mode==='star') points = sampleStar(N);
-  else if(mode==='infinity') points = sampleInfinity(N);
-  else points = sampleCircle(N);
-  coeffs = dft(points);
+  const N=1024;
+  if(shapeSel.value==='heart') points=sampleHeart(N);
+  else if(shapeSel.value==='star') points=sampleStar(N);
+  else if(shapeSel.value==='infinity') points=sampleInfinity(N);
+  else points=sampleCircle(N);
+  coeffs=dft(points);
   rebuildOrder();
-  t = 0;
+  t=0; trace.length=0;
 }
-buildShape();
-requestAnimationFrame(loop);
+buildShape(); requestAnimationFrame(loop);
 
 harm.addEventListener('input', ()=>{harmVal.textContent=harm.value});
-speed.addEventListener('input', ()=>{spdVal.textContent=speed.value+'×'});
+speed.addEventListener('input', ()=>{spdVal.textContent=parseFloat(speed.value).toFixed(2)+'×'});
+trail.addEventListener('input', ()=>{traceMax=parseInt(trail.value,10); trailVal.textContent=traceMax});
 shapeSel.addEventListener('change', ()=> buildShape());
-resetBtn.addEventListener('click', ()=> { t=0; });
+resetBtn.addEventListener('click', ()=> { t=0; trace.length=0; });
 pauseBtn.addEventListener('click', ()=> { running=!running; pauseBtn.textContent = running?'Pausa':'Reanudar'; });
 drawOnlyBtn.addEventListener('click', ()=> { onlyLine=!onlyLine; drawOnlyBtn.textContent = onlyLine?'Círculos + línea':'Solo línea'; });
 savePNGBtn.addEventListener('click', (e)=>{
   e.preventDefault();
   const url = cvs.toDataURL('image/png');
-  const a = document.createElement('a');
-  a.href=url; a.download='epiciclos.png'; a.click();
+  const a = document.createElement('a'); a.href=url; a.download='epiciclos.png'; a.click();
 });
 </script>
 </body>
